# FlipFinder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DataIngestion.md  EmbeddingEndpoint.md  EnsembleAgent.md  FrontierAgent.md  MessangingAgent.md  NNAgent.md  PlanningAgent.md  ScannerAgent.md  SpecialistAgent.md
notebooks/: Classical.ipynb  data_transformation.ipynb  experimentations.ipynb
notebooks/jsonl/: 0_200.jsonl
notebooks/pricer/: batch.py
scripts/: smoke_test_agents.py
src/agents/: planning_agent.py
src/agents/EmbeddingEndpoint/: Dockerfile  inference.py  requirements.txt  serve.py
src/agents/EnsembleAgent/: ensemble_agent.py  lambda_handler.py  preprocessor.py
src/agents/FrontierAgent/: frontier_agent.py  lambda_handler.py
src/agents/MessangingAgent/: messaging_agent.py
src/agents/NNAgent/: .dockerignore  Dockerfile.lambda  deep_neural_network.py  inference_service.py  lambda_handler.py  neural_network_agent.py
src/agents/PlanningAgent/: autonomous_planning_agent.py  lambda_handler.py  requirements.lambda.txt
src/agents/ScannerAgent/: lambda_handler.py  requirements.lambda.txt  scanner_agent.py
src/agents/SpecialistAgent/: Dockerfile  inference.py  pricer_service.py  requirements.txt  serve  serve.py  specialist_agent.py
src/dataset_ingestion/: hf_ingestion.py  s3_vector_ingestion.py
tests/lambda_contract/: test_ensemble_lambda_handler.py  test_frontier_lambda_handler.py
tests/unit/: test_ensemble_combine.py  test_frontier_agent.py  test_preprocessor.py
(+45 files in other folders)
